--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 		"handlebars": "~1.3.0",
 		"json2": "https://github.com/douglascrockford/JSON-js.git",
 		"require-handlebars-plugin": "~0.8.1",
-		"backbone.radio": "~1.0.2"
+		"backbone.radio": "~1.0.5",
+		"instafeed.js": "~1.4.1"
 	}
 }
